--- a/Prelude.fsproj
+++ b/Prelude.fsproj
@@ -2,11 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.2</Version>
+    <Version>0.2.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="Library.fs" />
+  </ItemGroup>
+
+  <!-- For Fable -->
+  <ItemGroup>
+    <Content Include="*.fsproj; *.fs" PackagePath="fable" />
   </ItemGroup>
 
 </Project>
